DASH-3566 [Frontend] Enable grid view on Resources page

--- a/src/components/application/company/appsco-company-resource-item.html
+++ b/src/components/application/company/appsco-company-resource-item.html
@@ -192,8 +192,7 @@ Custom property | Description | Default
                 displayGrid: {
                     type: Boolean,
                     value: false,
-                    reflectToAttribute: true,
-                    observer: '_displayGridChanged'
+                    reflectToAttribute: true
                 }
             },
 
