--- a/src/components/resource/appsco-share-resource.html
+++ b/src/components/resource/appsco-share-resource.html
@@ -739,7 +739,7 @@
             _filterAccountList: function() {
                 var listAll = JSON.parse(JSON.stringify(this._accountListAll)),
                     lengthAll = listAll.length,
-                    term = this._filterTerm.toLowerCase(),
+                    term = decodeURIComponent(this._filterTerm.toLowerCase()),
                     type = this._filterType;
 
                 this._hideMessage();
